<resources>
    <string name="app_name">Lab3_3</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="smoker">Smoker</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string-array name="age">
        <item>Less than 5</item>
        <item>6 To 10</item>
        <item>11 To 16</item>
        <item>17 To 21</item>
        <item>22 To 30</item>
        <item>31 To 40</item>
        <item>41 To 50</item>
        <item>More than 50</item>

    </string-array>
</resources>
